--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.28",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
