--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.28",
     "next": "14.1.4",
+    "next-view-transitions": "^0.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
