--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-view-transitions": "^0.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
