--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@prisma/client": "^5.12.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.28",
     "next": "14.1.4",
     "next-view-transitions": "^0.1.1",
+    "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
