--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formspree/react": "^2.5.1",
     "@prisma/client": "^5.12.1",
     "clsx": "^2.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.0.28",
     "next": "14.1.4",
     "next-view-transitions": "^0.1.1",
@@ -22,7 +23,8 @@
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
