Add Admin model to Prisma schema and update dependencies

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "@prisma/client": "^5.12.1",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.0.28",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "next-view-transitions": "^0.1.1",
     "prisma": "^5.12.1",
     "react": "^18",
