Add @vercel/analytics package and update dependencies

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ducanh2912/next-pwa": "^10.2.6",
     "@formspree/react": "^2.5.1",
     "@prisma/client": "^5.12.1",
+    "@vercel/analytics": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "file-saver": "^2.0.5",
